<resources>
    <string name="app_name">Penyakit Kulit</string>
    <string name="app_name2">Aplikasi Penyakit Kulit</string>
    <string name="about_app">Diagnosa dan ketahui penyakit kulit apa yang anda alami</string>
    <string name="app_intro">Ketahui tentang penyakit - penyakit kulit yg disebabkan oleh jamur</string>
    <string name="app_versi">v1.0.1</string>
    <string name="clear_session">Hapus Percakapan</string>
    <string name="logout">Logout</string>
    <string name="entry_hint">Type a message</string>
    <string name="opening_text">Now speaking with Watson!</string>
    <string name="conversation_icon_text">Watson Conversation Icon</string>
    <string name="send_to_watson_button">Send to Watson</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_close">Close Application</string>
    <string name="error_title_default">Error</string>
    <string name="error_title_invalid_credentials">Invalid Watson Conversation Credentials</string>
    <string name="error_message_invalid_credentials">Please verify your credentials in \"values/watson_credentials\" and rebuild the application.\n\nSee the README for further assistance.</string>
    <string name="error_title_bluemix_connection">Failed to Connect to Bluemix</string>
    <string name="error_message_bluemix_connection">Please verify your connection to the internet.</string>
    <string name="error_title_invalid_workspace">Invalid Workspace ID</string>
    <string name="error_message_invalid_workspace">Please verify your workspace ID in \"values/watson_credentials\" and rebuild the application.</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_nama">Nama Lengkap</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_ulangi_password">Ulangi Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_mulai">Diagnosa</string>
    <string name="error_invalid_email">Email tidak valid</string>
    <string name="error_not_same_pwd">Password tidak sama</string>
    <string name="error_invalid_password">Password terlalu pendek</string>
    <string name="error_incorrect_password">Password salah</string>
    <string name="error_field_required">Harus diisi</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
</resources>
